@@ -1,3 +1,8 @@
+2011-02-18  Ronaldo Maia  <romaia@async.com.br>
+
+	* kiwi/ui/icon.py:
+    Removing IconEntry to use new gtk api.
+
 === 1.9.27 ===
 2010-09-01  Ronaldo Maia  <romaia@async.com.br>
 
